# opentab

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  SETUP_GITHUB.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  start-frontend.js  start.sh  test_phase1.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.opencode/plans/: phase2-rebuild.md  table_output_reference.xlsx
backend/: Dockerfile  main.py  requirements.txt
backend/api/: compute.py  data.py  tables.py
backend/core/: code_parser.py  data_loader.py  statistics.py  tabulator.py
backend/sample_data/: sample.mdd
backend/temp/: DS1_Shampoo_5pt_3prod.csv
core/: code_parser.py  data_loader.py  mdd_parser.py  statistics.py  tabulator.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
opentab/: Dockerfile  __main__.py  cli.py  main.py
opentab/api/: compute.py  data.py
opentab/core/: code_parser.py  data_loader.py  mdd_parser.py  tabulator.py
opentab/sample_data/: sample.csv  sample_labels.json
opentab/static/: index.html
opentab/temp/: Aurora_dummy_rawdata_n100_v2.csv  S26019295.dzf  S26019295.mdd  another_ma_questions_data.csv  (+1 more)
sample_data/: sample.csv
temp/: .gitignore  comprehensive_survey_data.csv  comprehensive_survey_data_q12_split.csv
test_data/: DATA_DICTIONARY.md  README.md  TEST_SCENARIOS.md  comprehensive_survey_data.csv  generate_data.py
ui/: code_builder.py  data_upload.py  table_display.py
(+64 files in other folders)
