[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opentab"
version = "0.2.1"
description = "Survey data cross-tabulation tool"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "chardet>=5.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
opentab = "opentab.cli:main"

[tool.hatch.build.targets.wheel]
include = ["opentab/**"]
